--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,27 @@
 header {
-    display: flex;
-    background-color: var(--clr-bg-primary);
-    height: 100%;
+  display: flex;
+  background-color: var(--clr-bg-primary);
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  color: var(--clr-text-primary);
+  place-items: center;
 }
 
+.header_icon {
+  width: 50px;
+  height: 50px;
+}
+
+.left_header {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.left_header p {
+    align-self: center;
+}
+
+.right_header {
+  display: flex;
+  gap: 1.5rem;
+}
