--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
 :root {
-  --clr-bg-primary: #36cd6d;
-  --clr-bg-secondary: #cd3292;
+  --clr-bg-primary: #23252C;
+  --clr-bg-secondary: #ffffff;
 
-  --clr-text-primary: #cd3292;
-  --clr-text-secondary: #36cd6d;
+  --clr-text-primary: #ffffff;
+  --clr-text-secondary: #23252C;
 
   --ff-primary: "'Poppins', sans-serif";
+  --fs-primary: 1.2rem;
 }
 
 * {
@@ -16,6 +17,7 @@
   box-sizing: border-box;
   font: inherit;
   font-family: var(--ff-primary);
+  font-size: var(--fs-primary)
 }
 
 body {
@@ -32,4 +34,3 @@ svg {
 #__next {
   height: 100%;
 }
-
