--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,7 +3,8 @@
   padding: 3rem;
   padding-top: 5rem;
   justify-content: center;
-  min-height: 650px;
+  min-height: 725px;
+  background-color: #1A1B21;
 }
 
 .hero-quote {
@@ -17,8 +18,10 @@
   top: 55%;
   left: 55%;
   font-style: italic;
+  border-radius: 2rem;
 }
 
 .hero-image {
   max-width: 600px;
+  border-radius: 2rem;
 }
